configure staging docker-compose, set log levels, rework error message, update swagger and postman
